# vm

./: Cargo.toml  pico.uf2  tarr.by  test.by  test1.by  test2.by  test3.by  test5.by  test6.by  test_all.by  test_arrays_loop.by  tfcall.by  tfn.by  tmulti.by  tn.by  tnat.by  tns.by  tparm.by  tscmp.by  tscon.by  tsub.by  tw.by
.cargo/: config.toml
vm-core/: Cargo.toml
vm-core/src/: flags.rs  instruction.rs  lib.rs
vm-esp32/: Cargo.toml  esp32-linkall.x  memory.x
vm-esp32-bench/: Cargo.toml  vm-esp32-test.rs
vm-esp32-bench/.cargo/: config.toml
vm-esp32-bench/src/: main.rs
vm-esp32/src/: main.rs
vm-host/: Cargo.toml
vm-host-bench/: Cargo.toml  vm-host-test.rs
vm-host-bench/src/: main.rs
vm-host/src/: main.rs
vm-native/: Cargo.toml
vm-native/src/: lib.rs
vm-pico/: Cargo.toml  memory.x
vm-pico/.cargo/: config.toml
vm-pico/src/: main.rs
